# napari_fmi

./: CHANGELOG  LICENSE  README.rst  pyproject.toml  requirements.txt
src/napari_fmi/: __main__.py  app.py
src/plugin-fmi/: LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
src/plugin-fmi/src/plugin_fmi/: __init__.py  _widget.py  constants.py  gui.py  gui_logs.py  gui_main.py  loaders.py  napari.yaml  processing.py  protocol_class.py  qt_widgets.py  visualization.py  widget_logs.py  widget_main.py
