[metadata]
name = plugin-fmi
version = 1.0.0
description = A plugin to detect anhydrite from core
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mosgeo/napari-anhydrite-detector
author = Anuar Shakirov
author_email = mustafa.geoscientist@outlook.com
license = GPL-3.0-only
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing

[options]
packages = find:
install_requires =
    numpy
    qtpy
    opencv-python
    onnxruntime
    pyside2>=5.15.2
    napari[all]==0.4.19.post1
    pandas
    opencv-python
    numpy
    tqdm
    onnx==1.15.0
    onnxruntime==1.17.1
    matplotlib
    PyQtChart
    openpyxl
    pyqtgraph
    h5py

python_requires = >=3.11
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    plugin-fmi = plugin_fmi:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
